--- a/src/turtle_pet/src/popup.css
+++ b/src/turtle_pet/src/popup.css
@@ -1,11 +1,22 @@
 body {
-  margin: 0;
+  margin: 50px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: green;
+  background-color: #ccd5ae;
+  
+}
+
+.buttonChange > button{
+  margin: 20px;
+  background-color: #dda15e ;
+  color: #fefae0;
+  border-radius: 20% ;
+  text-decoration: none;
+  width: 7em;
+  height: 5em;
 }
 
 code {
